# voxstore

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  PLAN.md  README.md  TUNNEL.md  package-lock.json  package.json  playwright.config.js  render.yaml
.claude/: settings.json
.claude/hooks/: post_tool_use.py  pre_tool_use.py
.github/workflows/: ci.yml
app/client/: app.js  audio-processor.js  index.html  sentry.js  style.css
app/server/: .env.sample  pyproject.toml  server.py
app/server/core/: db.py  embeddings.py  llm_extraction.py  models.py  search.py  transcribe.py
app/server/db/: embeddings_7345ba6b922ba858.npz  embeddings_be4ea2eba3bd9c47.npz
app/server/tests/: conftest.py  test_cart.py  test_health.py  test_products.py  test_search.py  test_transcribe.py
autopilot/: .env.sample  pipeline.py  poller.py  pyproject.toml  webhook_server.py
autopilot/agents/: agent_logging.py  code_fix_agent.py  code_review_agent.py  fix_agent.py  review_agent.py  security_agent.py
autopilot/models/: sentry_issue.py
autopilot/modules/: git_ops.py  github_ops.py  logging.py  sentry_parser.py  signature.py  worktree_ops.py
autopilot/tests/: conftest.py  test_code_fix_agent.py  test_poller.py  test_sentry_issue.py  test_sentry_parser.py  test_signature.py  test_webhook_server.py  test_worktree_ops.py
scripts/: create_worktree.py  start.sh  start_autopilot.sh  start_poller.sh
tests/e2e/: cart.spec.js  comprehensive.spec.js  products.spec.js  search.spec.js  visual.spec.js  voice.spec.js
